Bug 332737 - EDID strings can be up to 13 bytes
Summary: EDID strings can be up to 13 bytes
Status: RESOLVED FIXED
Alias: None
Product: colord-kde
Classification: Unmaintained
Component: Daemon Module (KDED) (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Nicoletti
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-28 13:48 UTC by Florian Höch
Modified: 2016-10-09 06:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
EDID strings can be up to 13 bytes (1.01 KB, patch)
2014-03-28 13:49 UTC, Florian Höch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Florian Höch 2014-03-28 13:48:39 UTC
The EDID specification allows up to 13 bytes for text blocks.

Reproducible: Sometimes

Steps to Reproduce:
1. Have a device with EDID text blocks that exceed 12 bytes.
2. Look at the device ID generated for that device.
Actual Results:  
You will see that the last byte of one of the text blocks that was used for the dice ID is missing the last character.

Expected Results:  
The text blocks should contain the missing last character.
Comment 1 Florian Höch 2014-03-28 13:49:16 UTC
Created attachment 85810 [details]
EDID strings can be up to 13 bytes
Comment 2 Daniel Nicoletti 2016-10-09 06:43:46 UTC
Git commit c7186b7ee73f319e062645f0ab73a4e0e6c808c3 by Daniel Nicoletti, on behalf of Florian Höch.
Committed on 09/10/2016 at 06:43.
Pushed by dantti into branch 'master'.

EDID strings can be up to 13 bytes

The EDID specification allows up to 13 bytes for text blocks.

M  +2    -2    colord-kded/Edid.cpp

http://commits.kde.org/colord-kde/c7186b7ee73f319e062645f0ab73a4e0e6c808c3