EDID strings can be up to 13 bytes

The EDID specification allows up to 13 bytes for text blocks.

BUG: 332737